--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,8 +9,10 @@ services:
       - MYSQL_DATABASE=jorani
       - MYSQL_USER=jorani
       - MYSQL_PASSWORD=jorani
+    volumes:
+      - ./application/:/var/www/html/application/
   mysql:
-    image: mysql:5
+    image: mysql:8.0
     ports:
       - "3306:3306"
     environment:
@@ -19,4 +21,8 @@ services:
       - MYSQL_USER=jorani
       - MYSQL_PASSWORD=jorani
     volumes:
-      - ./sql/jorani.sql:/docker-entrypoint-initdb.d/jorani.sql
+      - ./sql/GetFamilyTree_mysql5.6.sql:/docker-entrypoint-initdb.d/01-GetFamilyTree_mysql5.6.sql
+      - ./sql/jorani.sql:/docker-entrypoint-initdb.d/02-jorani.sql
+
+# Si erreur mysql : lancer mysql -u root -pjorani jorani < 01-GetFamilyTree_mysql5.6.sql
+# puis : mysql -u root -pjorani jorani < 02-jorani.sql
